--- a/package.json
+++ b/package.json
@@ -7,26 +7,27 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-types": "npx supabase gen types typescript --project-id wrppqgamztpykiyxmwwu --schema public > types_db.ts"
+    "generate-types": "npx supabase gen types typescript --project-id ymwtdspryuuchtpshzfw --schema public > types_db.ts"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@material-tailwind/react": "^2.1.9",
-    "@mui/icons-material": "^5.15.17",
-    "@supabase/ssr": "^0.3.0",
-    "@tanstack/react-query": "^5.37.1",
-    "next": "14.2.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^6.4.4",
+    "@supabase/ssr": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.66.0",
+    "autoprefixer": "^10.4.20",
+    "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18",
-    "supabase": "2.15.8"
+    "react-query": "^3.39.3",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.19",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
